# 3d_renderer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  justfile
ios/: Info.plist.in
src/: Array.cpp  Array.h  Camera.cpp  Camera.h  Clipping.cpp  Clipping.h  Display.cpp  Display.h  Light.cpp  Light.h  Logger.h  Main.cpp  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  SDLHelper.h  Swap.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  upng.cpp
src/Profiler/: ProfileTimer.cpp  ProfileTimer.h  Profiler.cpp  Profiler.h
